--- a/files/requirements_system.txt
+++ b/files/requirements_system.txt
@@ -19,20 +19,10 @@ python3
 python3-distutils
 python3-pip
 pylint
+python3-pyglet
 
 # --- Nvidia TensorRT ---
-python3-libnvinfer=6.0.1-1+cuda10.1
-python3-libnvinfer-dev=6.0.1-1+cuda10.1
-libnvinfer6=6.0.1-1+cuda10.1
-libnvinfer-plugin6=6.0.1-1+cuda10.1
-libnvparsers6=6.0.1-1+cuda10.1
-libnvonnxparsers6=6.0.1-1+cuda10.1
-libnvinfer-dev=6.0.1-1+cuda10.1
-libnvinfer-plugin-dev=6.0.1-1+cuda10.1
-libnvparsers-dev=6.0.1-1+cuda10.1
-libnvonnxparsers-dev=6.0.1-1+cuda10.1
-libcudnn7-dev=7.6.5.32-1+cuda10.1
-#uff-converter-tf
+
 
 # --- Deep Reinforcement Learning environment dependencies ---
 xvfb
